# program-uninstaller

./: README.md  install_pu.sh  program-uninstaller.desktop  pu_launcher.sh  pyproject.toml
program_uninstaller/: leftoversearcher.py  pacget.py  progremover.py  tui_app.py
