[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "program-uninstaller"
version = "0.1.0"
authors = [{name = "Victor"}]
description = "TUI application for removing packages and leftovers on Linux"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
program-uninstaller = "program_uninstaller.tui_app:main"

[project.urls]
Homepage = "https://github.com/yourname/program-uninstaller"